--- a/webstyles.css
+++ b/webstyles.css
@@ -1,4 +1,64 @@
 body {
+    background-image: url(Hammer.png);
+    background-repeat: round;
+    background-size: 30%;
+    font-family: "Times New Roman";
+    padding-left: 8px;
+}
+
+a {
+    cursor: crosshair;
+}
+
+a:visited{
+  color:blue;
+}
+
+
+a:hover {
+    color: lawngreen;
+}
+
+.title {
+    font-family: "Times New Roman";
+    font-size: 70px;
+    line-height: 1;
+    shape-margin: 0.5;
+    margin-top: 0px;
+    text-align: left;
+    text-decoration: underline;
+    color: #ff0000;
+}
+
+.name {
+    font-family: "Times New Roman";
+    font-size: 30px;
+    line-height: 0;
+    margin-top: 30px;
+    text-align: left;
+    color: blue;
+}
+
+.folio link {
+    font-family: "Times New Roman";
+    font-size: 40px;
+    line-height: 0;
+    margin-top: 30px;
+    text-align: left;
+    text-decoration: underline;
+    color: blue;
+}
+
+#big {
+    letter-spacing: -5px;
+}
+
+#name {
+    letter-spacing: -1px;
+}
+
+/*
+body {
     background-color: #ead4b8;
     font-family: "Times New Roman";
     padding-left: 8px;
@@ -254,3 +314,4 @@ a:hover {
     .home-image:hover .img-show11 {
         display: inline;
     }
+*/
